# minimax-sdk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/specs/: 2026-03-18-sdk-design.md  2026-03-19-sdk-logic-review.md
python/: README.md  pyproject.toml  pyrightconfig.json
python/src/minimax_sdk/: __init__.py  _audio.py  _base.py  _http.py  _polling.py  client.py  exceptions.py
python/src/minimax_sdk/resources/: files.py  image.py  music.py  speech.py  text.py  video.py  voice.py
python/src/minimax_sdk/types/: __init__.py  files.py  image.py  music.py  speech.py  text.py  video.py  voice.py
python/tests/: conftest.py  test_audio.py  test_base.py  test_client.py  test_exceptions.py  test_files.py  test_http.py  test_image.py  test_music.py  test_polling.py  test_speech.py  test_text.py  test_video.py  test_voice.py
python/tests/integration/: conftest.py  test_files.py  test_image.py  test_integration.py  test_music.py  test_speech.py  test_text.py  test_video.py  test_voice.py  test_voice_files.py
typescript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/coverage/: clover.xml  coverage-final.json  index.html
typescript/coverage/src/: audio.ts.html  client.ts.html  error.ts.html  http.ts.html  index.html  index.ts.html  polling.ts.html  resource.ts.html  streaming.ts.html  version.ts.html
typescript/src/: audio.ts  client.ts  error.ts  http.ts  index.ts  polling.ts  resource.ts  streaming.ts
typescript/src/resources/: files.ts  image.ts  index.ts  music.ts  speech.ts  text.ts  video.ts  voice.ts
typescript/tests/: audio.test.ts  client.test.ts  error.test.ts  http.test.ts  polling.test.ts  streaming.test.ts
typescript/tests/integration/: files.test.ts  image.test.ts  music.test.ts  speech.test.ts  text.test.ts  video.test.ts  voice.test.ts
typescript/tests/resources/: files.test.ts  image.test.ts  music.test.ts  (+4 more)
(+9 files in other folders)
