[project]
name = "minimax-sdk"
version = "0.1.0"
description = "Python SDK for MiniMax multimodal APIs"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minimax_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"
