[project]
name = "minimax-sdk"
version = "0.1.1"
description = "Python SDK for MiniMax multimodal APIs"
license = "MIT"
readme = "README.md"
authors = [{name = "Ken Tseng"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "python-dotenv>=1.0",
    "ruff>=0.8",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://github.com/tsen1220/minimax-sdk"
Repository = "https://github.com/tsen1220/minimax-sdk"
Documentation = "https://github.com/tsen1220/minimax-sdk#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minimax_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"
